lazy intialization added